--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "emoji-mart": "^2.6.1",
     "firebase": "^5.3.0",
+    "hamburgers": "^1.1.3",
     "md5": "^2.2.1",
     "mime-types": "^2.1.20",
     "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-animated-burgers": "^1.2.6",
     "react-avatar-editor": "^11.0.4",
     "react-color": "^2.14.1",
     "react-dom": "^16.4.1",
@@ -19,6 +21,7 @@
     "redux-devtools-extension": "^2.13.5",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
+    "styled-components": "^4.3.1",
     "uuid": "^3.3.2"
   },
   "scripts": {
